--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="C:\Users\shikhar chaudhary\OneDrive\Desktop\Coding\WEBDEV1\personalwebsite.html\IMG20191106225720-modified.png" alt="Shikhar's Profile Picture" height="200px" width="200px"></td>
+            <td><img src="learning-site/IMG20191106225720-modified.png" alt="Shikhar's Profile Picture" height="200px" width="200px"></td>
             <td><h1>SHIKHAR CHAUDHARY</h1>
                 <p><em>First Year Undergrad Student at <b>IITK</b></em></p>
                 <p>I am pursuing my bachelors in <a href="https://www.iitk.ac.in/mse/"><strong>Material Science and Engineering</strong></a></p>
